--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -53,25 +53,25 @@
         <!-- Readme -->
         <None Include="README.md" Pack="true" PackagePath="/" />
         
-        <!-- Windows DLL -->
-        <None Include="native/win-x64/box2d.dll" Pack="true" PackagePath="runtimes/win-x64/native/" />
-        <!-- Windows x86 DLL -->
-        <None Include="native/win-x86/box2d.dll" Pack="true" PackagePath="runtimes/win-x86/native/" />
-        <!-- Windows arm64 DLL -->
-        <None Include="native/win-arm64/box2d.dll" Pack="true" PackagePath="runtimes/win-arm64/native/" />
-        <!-- Linux SO -->
-        <None Include="native/linux-x64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x64/native/" />
-        <!-- Linux x86 SO -->
-        <None Include="native/linux-x86/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x86/native/" />
-        <!-- Linux arm64 SO -->
-        <None Include="native/linux-arm64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-arm64/native/" />
-        <!-- OSX DYLIB -->
-        <None Include="native/osx-x64/libbox2d.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/" />
-        <!-- OSX ARM64 DYLIB -->
-        <None Include="native/osx-arm64/libbox2d.dylib" Pack="true" PackagePath="runtimes/osx-arm64/native/" />
-        
-        <!-- XMLDoc -->
-        <None Include="bin/$(Configuration)/netstandard2.1/Box2DBindings.xml" Pack="true" PackagePath="lib/netstandard2.1/" />
+<!--        &lt;!&ndash; Windows DLL &ndash;&gt;-->
+<!--        <None Include="native/win-x64/box2d.dll" Pack="true" PackagePath="runtimes/win-x64/native/" />-->
+<!--        &lt;!&ndash; Windows x86 DLL &ndash;&gt;-->
+<!--        <None Include="native/win-x86/box2d.dll" Pack="true" PackagePath="runtimes/win-x86/native/" />-->
+<!--        &lt;!&ndash; Windows arm64 DLL &ndash;&gt;-->
+<!--        <None Include="native/win-arm64/box2d.dll" Pack="true" PackagePath="runtimes/win-arm64/native/" />-->
+<!--        &lt;!&ndash; Linux SO &ndash;&gt;-->
+<!--        <None Include="native/linux-x64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x64/native/" />-->
+<!--        &lt;!&ndash; Linux x86 SO &ndash;&gt;-->
+<!--        <None Include="native/linux-x86/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x86/native/" />-->
+<!--        &lt;!&ndash; Linux arm64 SO &ndash;&gt;-->
+<!--        <None Include="native/linux-arm64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-arm64/native/" />-->
+<!--        &lt;!&ndash; OSX DYLIB &ndash;&gt;-->
+<!--        <None Include="native/osx-x64/libbox2d.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/" />-->
+<!--        &lt;!&ndash; OSX ARM64 DYLIB &ndash;&gt;-->
+<!--        <None Include="native/osx-arm64/libbox2d.dylib" Pack="true" PackagePath="runtimes/osx-arm64/native/" />-->
+<!--        -->
+<!--        &lt;!&ndash; XMLDoc &ndash;&gt;-->
+<!--        <None Include="bin/$(Configuration)/netstandard2.1/Box2DBindings.xml" Pack="true" PackagePath="lib/netstandard2.1/" />-->
     </ItemGroup>
 
     <ItemGroup>
