--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -52,25 +52,12 @@
     <ItemGroup>
         <!-- Readme -->
         <None Include="README.md" Pack="true" PackagePath="/" />
-        
-<!--        &lt;!&ndash; Windows DLL &ndash;&gt;-->
-<!--        <None Include="native/win-x64/box2d.dll" Pack="true" PackagePath="runtimes/win-x64/native/" />-->
-<!--        &lt;!&ndash; Windows x86 DLL &ndash;&gt;-->
-<!--        <None Include="native/win-x86/box2d.dll" Pack="true" PackagePath="runtimes/win-x86/native/" />-->
-<!--        &lt;!&ndash; Windows arm64 DLL &ndash;&gt;-->
-<!--        <None Include="native/win-arm64/box2d.dll" Pack="true" PackagePath="runtimes/win-arm64/native/" />-->
-<!--        &lt;!&ndash; Linux SO &ndash;&gt;-->
-<!--        <None Include="native/linux-x64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x64/native/" />-->
-<!--        &lt;!&ndash; Linux x86 SO &ndash;&gt;-->
-<!--        <None Include="native/linux-x86/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x86/native/" />-->
-<!--        &lt;!&ndash; Linux arm64 SO &ndash;&gt;-->
-<!--        <None Include="native/linux-arm64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-arm64/native/" />-->
-<!--        &lt;!&ndash; OSX DYLIB &ndash;&gt;-->
-<!--        <None Include="native/osx-x64/libbox2d.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/" />-->
-<!--        &lt;!&ndash; OSX ARM64 DYLIB &ndash;&gt;-->
-<!--        <None Include="native/osx-arm64/libbox2d.dylib" Pack="true" PackagePath="runtimes/osx-arm64/native/" />-->
-<!--        -->
-<!--        &lt;!&ndash; XMLDoc &ndash;&gt;-->
+
+        <None Include="native/**/*.dll" Pack="true" PackagePath="runtimes/%(RecursiveDir)native/" />
+        <None Include="native/**/*.so" Pack="true" PackagePath="runtimes/%(RecursiveDir)native/" />
+        <None Include="native/**/*.dylib" Pack="true" PackagePath="runtimes/%(RecursiveDir)native/" />
+    
+        <!-- XMLDoc -->
 <!--        <None Include="bin/$(Configuration)/netstandard2.1/Box2DBindings.xml" Pack="true" PackagePath="lib/netstandard2.1/" />-->
     </ItemGroup>
 
