--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -114,11 +114,6 @@ jobs:
         steps:
             -   uses: actions/checkout@v4
             
-            # Install 32‑bit toolchain when building linux‑x86
-            -   name: "Install gcc‑multilib for 32‑bit build"
-                if: matrix.target == 'linux-x86' && steps.cache.outputs.cache-hit != 'true'
-                run: sudo apt-get update && sudo apt-get install --no-install-recommends -y gcc-multilib g++-multilib
-
             -   id: cache
                 name: Restore native build cache
                 uses: actions/cache@v4
@@ -127,6 +122,10 @@ jobs:
                     key: ${{ matrix.target }}-${{ needs.detect-tag.outputs.box2d_tag }}
                     restore-keys: |
                         ${{ matrix.target }}-
+
+            -   name: "Install gcc‑multilib for 32‑bit build"
+                if: steps.cache.outputs.cache-hit != 'true' && matrix.target == 'linux-x86' && steps.cache.outputs.cache-hit != 'true'
+                run: sudo apt-get update && sudo apt-get install --no-install-recommends -y gcc-multilib g++-multilib
 
             -   name: "Clone Box2D ${{ needs.detect-tag.outputs.box2d_tag }}"
                 if: steps.cache.outputs.cache-hit != 'true'
