--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -164,7 +164,7 @@ jobs:
     publish-bindings:
         name: Build & publish C# bindings
         needs: [ detect-tag, build-box2d ]
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-24.04-arm
         permissions:
             contents: read
             packages: write
@@ -186,7 +186,7 @@ jobs:
                 run: dotnet build src/UnitTests --configuration Release
 
             -   name: Copy Linux shared library to UnitTests output
-                run: cp src/Box2DBindings/native/linux-x64/libbox2d.so src/UnitTests/bin/Release/net9.0/
+                run: cp src/Box2DBindings/native/linux-arm64/libbox2d.so src/UnitTests/bin/Release/net9.0/
                 
             -   name: Run UnitTests
                 run: dotnet test src/UnitTests --configuration Release --no-build --logger trx --results-directory TestResults
