--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,35 +76,35 @@ jobs:
                         cmake_flags: >
                             -DCMAKE_SYSTEM_NAME=Linux -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=aarch64 -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized" -DCMAKE_C_FLAGS_RELEASE="-O3 -flto" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
                     
-                    # Windows x64
-                    -   target: win-x64
-                        runs_on: [self-hosted, Linux, X64]
-                        cmake_flags: >
-                            -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=x86_64 -DCMAKE_C_COMPILER=x86_64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=x86_64-w64-mingw32-g++ -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
-                                        
-                    # Windows x86
-                    -   target: win-x86
-                        runs_on: [self-hosted, Linux, X64]
-                        cmake_flags: >
-                            -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=x86 -DCMAKE_C_COMPILER=i686-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=i686-w64-mingw32-g++ -DCMAKE_C_FLAGS="-m32 -msse -mstackrealign" -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
-                    
-                    # Windows ARM64
-                    -   target: win-arm64
-                        runs_on: [self-hosted, Linux, X64]
-                        cmake_flags: >
-                            -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=ARM64 -DCMAKE_C_COMPILER=aarch64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=aarch64-w64-mingw32-g++ -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
-                    
-                    # macOS x64
-                    -   target: osx-x64
-                        runs_on: macos-latest
-                        cmake_flags: >
-                            -DCMAKE_OSX_ARCHITECTURES=x86_64 -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
-                    
-                    # macOS ARM64
-                    -   target: osx-arm64
-                        runs_on: macos-latest
-                        cmake_flags: >
-                            -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
+#                    # Windows x64
+#                    -   target: win-x64
+#                        runs_on: [self-hosted, Linux, X64]
+#                        cmake_flags: >
+#                            -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=x86_64 -DCMAKE_C_COMPILER=x86_64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=x86_64-w64-mingw32-g++ -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
+#                                        
+#                    # Windows x86
+#                    -   target: win-x86
+#                        runs_on: [self-hosted, Linux, X64]
+#                        cmake_flags: >
+#                            -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=x86 -DCMAKE_C_COMPILER=i686-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=i686-w64-mingw32-g++ -DCMAKE_C_FLAGS="-m32 -msse -mstackrealign" -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
+#                    
+#                    # Windows ARM64
+#                    -   target: win-arm64
+#                        runs_on: [self-hosted, Linux, X64]
+#                        cmake_flags: >
+#                            -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=ARM64 -DCMAKE_C_COMPILER=aarch64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=aarch64-w64-mingw32-g++ -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
+#                    
+#                    # macOS x64
+#                    -   target: osx-x64
+#                        runs_on: macos-latest
+#                        cmake_flags: >
+#                            -DCMAKE_OSX_ARCHITECTURES=x86_64 -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
+#                    
+#                    # macOS ARM64
+#                    -   target: osx-arm64
+#                        runs_on: macos-latest
+#                        cmake_flags: >
+#                            -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
         runs-on: ${{ matrix.runs_on }}
         
         concurrency:
@@ -156,24 +156,24 @@ jobs:
                       exit 1
                     fi
 
-            -   name: Strip release artifacts
-                run: |
-                    if [[ -f artefact/libbox2d.so ]]; then
-                      strip artefact/libbox2d.so
-                    elif [[ -f artefact/libbox2d.dylib ]]; then
-                      strip -x artefact/libbox2d.dylib
-                    elif [[ -f artefact/libbox2d.dll ]]; then
-                      strip artefact/libbox2d.dll
-                    fi
+#            -   name: Strip release artifacts
+#                run: |
+#                    if [[ -f artefact/libbox2d.so ]]; then
+#                      strip artefact/libbox2d.so
+#                    elif [[ -f artefact/libbox2d.dylib ]]; then
+#                      strip -x artefact/libbox2d.dylib
+#                    elif [[ -f artefact/libbox2d.dll ]]; then
+#                      strip artefact/libbox2d.dll
+#                    fi
                     
-            -   name: UPX pack release artifacts if not 'win-arm64'
-                if: ${{ matrix.target != 'win-arm64' }}
-                run: |
-                    if [[ -f artefact/libbox2d.so ]]; then
-                      upx --ultra-brute artefact/libbox2d.so
-                    elif [[ -f artefact/libbox2d.dll ]]; then
-                      upx --ultra-brute artefact/libbox2d.dll
-                    fi
+#            -   name: UPX pack release artifacts if not 'win-arm64'
+#                if: ${{ matrix.target != 'win-arm64' }}
+#                run: |
+#                    if [[ -f artefact/libbox2d.so ]]; then
+#                      upx --ultra-brute --debug artefact/libbox2d.so
+#                    elif [[ -f artefact/libbox2d.dll ]]; then
+#                      upx --ultra-brute --debug artefact/libbox2d.dll
+#                    fi
 
             -   name: Upload artefacts
                 uses: actions/upload-artifact@v4
@@ -185,46 +185,46 @@ jobs:
     # -----------------------------------------------------------------------------
     # Job 3 ─ Build & publish the managed C# bindings package
     # -----------------------------------------------------------------------------
-    publish-bindings:
-        name: Build & publish C# bindings
-        needs: [ detect-tag, build-box2d ]
-        runs-on: [self-hosted, Linux, ARM64]
-        permissions:
-            contents: read
-            packages: write
-        steps:
-            -   uses: actions/checkout@v4
-
-            -   name: "Download native libs"
-                uses: actions/download-artifact@v4
-                with:
-                    path: src/Box2DBindings/native
-                    pattern: "*"
-
-            -   name: Setup dotnet
-                uses: actions/setup-dotnet@v4
-                with:
-                    dotnet-version: 9.0.x
-
-            -   name: Build UnitTests project
-                run: dotnet build src/UnitTests --configuration Release
-
-            -   name: Copy Linux shared library to UnitTests output
-                run: cp src/Box2DBindings/native/linux-arm64/libbox2d.so src/UnitTests/bin/Release/net9.0/
-                
-            -   name: Run UnitTests
-                run: dotnet test src/UnitTests --configuration Release --no-build --logger trx --results-directory TestResults
-                
-            -   name: "Pack NuGet package"
-                run: |
-                    dotnet pack src/Box2DBindings \
-                      -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
-                      -c Release
-            
-            -   name: "Push to NuGet"
-                env:
-                    NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-                run: |
-                  dotnet nuget push src/Box2DBindings/bin/Release/*.nupkg \
-                    --api-key "$NUGET_API_KEY" \
-                    --source "$NUGET_FEED"
+#    publish-bindings:
+#        name: Build & publish C# bindings
+#        needs: [ detect-tag, build-box2d ]
+#        runs-on: [self-hosted, Linux, ARM64]
+#        permissions:
+#            contents: read
+#            packages: write
+#        steps:
+#            -   uses: actions/checkout@v4
+#
+#            -   name: "Download native libs"
+#                uses: actions/download-artifact@v4
+#                with:
+#                    path: src/Box2DBindings/native
+#                    pattern: "*"
+#
+#            -   name: Setup dotnet
+#                uses: actions/setup-dotnet@v4
+#                with:
+#                    dotnet-version: 9.0.x
+#
+#            -   name: Build UnitTests project
+#                run: dotnet build src/UnitTests --configuration Release
+#
+#            -   name: Copy Linux shared library to UnitTests output
+#                run: cp src/Box2DBindings/native/linux-arm64/libbox2d.so src/UnitTests/bin/Release/net9.0/
+#                
+#            -   name: Run UnitTests
+#                run: dotnet test src/UnitTests --configuration Release --no-build --logger trx --results-directory TestResults
+#                
+#            -   name: "Pack NuGet package"
+#                run: |
+#                    dotnet pack src/Box2DBindings \
+#                      -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
+#                      -c Release
+#            
+#            -   name: "Push to NuGet"
+#                env:
+#                    NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+#                run: |
+#                  dotnet nuget push src/Box2DBindings/bin/Release/*.nupkg \
+#                    --api-key "$NUGET_API_KEY" \
+#                    --source "$NUGET_FEED"
