--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,7 +62,7 @@ jobs:
                     -   target: linux-x64
                         runs_on: [self-hosted, Linux, X64]
                         cmake_flags: >
-                            -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized" -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_EXE_LINKER_FLAGS="-static-libgcc" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
+                            -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized" -DCMAKE_C_FLAGS_RELEASE="-O3 -flto -march=native" -DCMAKE_SHARED_LINKER_FLAGS="-static-libgcc -flto" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
                     
                     # Linux x86 (cross‑compile)
                     -   target: linux-x86
@@ -156,24 +156,24 @@ jobs:
                       exit 1
                     fi
 
-#            -   name: Strip release artifacts
-#                run: |
-#                    if [[ -f artefact/libbox2d.so ]]; then
-#                      strip artefact/libbox2d.so
-#                    elif [[ -f artefact/libbox2d.dylib ]]; then
-#                      strip -x artefact/libbox2d.dylib
-#                    elif [[ -f artefact/libbox2d.dll ]]; then
-#                      strip artefact/libbox2d.dll
-#                    fi
+            -   name: Strip release artifacts
+                run: |
+                    if [[ -f artefact/libbox2d.so ]]; then
+                      strip artefact/libbox2d.so
+                    elif [[ -f artefact/libbox2d.dylib ]]; then
+                      strip -x artefact/libbox2d.dylib
+                    elif [[ -f artefact/libbox2d.dll ]]; then
+                      strip artefact/libbox2d.dll
+                    fi
                     
-#            -   name: UPX pack release artifacts if not 'win-arm64'
-#                if: ${{ matrix.target != 'win-arm64' }}
-#                run: |
-#                    if [[ -f artefact/libbox2d.so ]]; then
-#                      upx --ultra-brute --debug artefact/libbox2d.so
-#                    elif [[ -f artefact/libbox2d.dll ]]; then
-#                      upx --ultra-brute --debug artefact/libbox2d.dll
-#                    fi
+            -   name: UPX pack release artifacts if not 'win-arm64'
+                if: ${{ matrix.target != 'win-arm64' }}
+                run: |
+                    if [[ -f artefact/libbox2d.so ]]; then
+                      upx --ultra-brute --debug artefact/libbox2d.so
+                    elif [[ -f artefact/libbox2d.dll ]]; then
+                      upx --ultra-brute --debug artefact/libbox2d.dll
+                    fi
 
             -   name: Upload artefacts
                 uses: actions/upload-artifact@v4
